feature: mcp update (#11)
Enhanced Javadoc documentation for all production classes
New integration and unit tests with Keycloak testcontainers
Constructor-based validation replacing Spring validation annotations
Refactored MCP tool providers to use reactive return types
Upgraded PostgreSQL testcontainer version from 17.4 to 18.0
Replaced custom reactive context management with framework-provided ToolCallReactiveContextHolder