@@ -17,6 +17,17 @@ import org.springframework.web.server.ResponseStatusException;
 import lombok.extern.log4j.Log4j2;
 import reactor.core.publisher.Mono;
 
+/**
+ * Global exception handler for the Loads Service REST API.
+ * <p>
+ * This handler provides centralized exception handling for all controllers,
+ * converting various exception types into appropriate HTTP responses with
+ * meaningful error messages. It handles validation errors, data integrity
+ * violations, security exceptions, and general runtime errors.
+ * </p>
+ *
+ * @author Zhubin Salehi
+ */
 @RestControllerAdvice
 @Log4j2
 public class GlobalExceptionHandler {
@@ -31,16 +42,15 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(WebExchangeBindException.class)
     public Mono<ResponseEntity<String>> handleValidationException(WebExchangeBindException ex) {
         log.error("Validation error: {}", ex.getMessage());
+
         String error = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(err -> {
-                    String field = err.getField();
-                    String message = err.getDefaultMessage();
-                    Object rejectedValue = err.getRejectedValue();
-                    return String.format("%s: %s (rejected value: %s)", field, message, rejectedValue);
-                })
-                .reduce((a, b) -> a + "; " + b)
+                .map(err -> "%s: %s (rejected value: %s)".formatted(
+                        err.getField(),
+                        err.getDefaultMessage(),
+                        err.getRejectedValue()))
+                .reduce((a, b) -> "%s; %s".formatted(a, b))
                 .orElse("Validation failed");
         return just(ResponseEntity.status(BAD_REQUEST).body(error));
     }
